syntax = "proto3";
import "google/protobuf/any.proto";

package net.almightshell.ecache.masternode.services.proto3;

option java_multiple_files = true;

/**
 * Request & Response
 */
message RegisterSlaveRequest {
    string key = 1;
    int32 port = 2; 
}
message RegisterSlaveResponse{
    string key = 1;
}

message GlobalDepthRequest{
    
}
message GlobalDepthResponse{
    int32 globalDepth = 1;
}

message DoubleDirectoryRequest{
    
}
message DoubleDirectoryResponse{
     
}

message RequestSplitRequest{
    
}
message RequestSplitResponse{
    string address = 1;
    int32 port = 2;
}

/**
 * Service
 */
service MasterNodeServices{
    rpc registerSlave(RegisterSlaveRequest) returns (RegisterSlaveResponse);
    rpc getGlobalDepth(GlobalDepthRequest) returns (GlobalDepthResponse);
    rpc doubleDirectory(DoubleDirectoryRequest) returns (DoubleDirectoryResponse);
    rpc requestSplit(RequestSplitRequest) returns (RequestSplitResponse);
}